[package]
name = "ogg-sys"
version = "0.0.8"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
build = "libogg/build.rs"
links = "ogg"
description = "FFI for libogg, the media container."
license = "MIT"
repository = "https://github.com/tomaka/ogg-sys"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "*"
wasm-bindgen = "0.2.92"

[build-dependencies]
gcc = "0.3"
pkg-config = "0.3"
